[gd_scene load_steps=3 format=2]

[ext_resource path="res://MediaInfo.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="MediaInfo" type="VBoxContainer"]
margin_right = 100.0
margin_bottom = 101.961
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="Info" type="Label" parent="."]
margin_right = 640.0
margin_bottom = 48.0
text = "Info:

"

[node name="Name" type="Label" parent="."]
margin_top = 52.0
margin_right = 640.0
margin_bottom = 66.0
text = "Name: "

[node name="Description" type="Label" parent="."]
margin_top = 70.0
margin_right = 640.0
margin_bottom = 84.0
text = "Description: "
autowrap = true

[node name="LogoLabel" type="Label" parent="."]
margin_top = 88.0
margin_right = 640.0
margin_bottom = 102.0
text = "Logo:"
autowrap = true

[node name="Logo" type="TextureRect" parent="."]
margin_top = 106.0
margin_right = 640.0
margin_bottom = 206.0
rect_min_size = Vector2( 300, 100 )
texture = ExtResource( 2 )
stretch_mode = 5

[node name="SSLabel" type="Label" parent="."]
margin_top = 210.0
margin_right = 640.0
margin_bottom = 224.0
text = "Screenshot:"
autowrap = true

[node name="SS" type="TextureRect" parent="."]
margin_top = 228.0
margin_right = 640.0
margin_bottom = 468.0
rect_min_size = Vector2( 300, 240 )
texture = ExtResource( 2 )
stretch_mode = 5

[node name="TitleScreenLbl" type="Label" parent="."]
margin_top = 472.0
margin_right = 640.0
margin_bottom = 486.0
text = "Title Screen:"
autowrap = true

[node name="TitleScreen" type="TextureRect" parent="."]
margin_top = 490.0
margin_right = 640.0
margin_bottom = 590.0
rect_min_size = Vector2( 300, 100 )
texture = ExtResource( 2 )
stretch_mode = 5

[node name="BoxRenderLbl" type="Label" parent="."]
margin_top = 594.0
margin_right = 640.0
margin_bottom = 608.0
text = "Box Render:"
autowrap = true

[node name="BoxRender" type="TextureRect" parent="."]
margin_top = 612.0
margin_right = 640.0
margin_bottom = 712.0
rect_min_size = Vector2( 300, 100 )
texture = ExtResource( 2 )
stretch_mode = 5

[node name="BoxTexLbl" type="Label" parent="."]
margin_top = 716.0
margin_right = 640.0
margin_bottom = 730.0
text = "Box Texture:"
autowrap = true

[node name="BoxTex" type="TextureRect" parent="."]
margin_top = 734.0
margin_right = 640.0
margin_bottom = 834.0
rect_min_size = Vector2( 300, 100 )
texture = ExtResource( 2 )
stretch_mode = 5

[node name="SupportLbl" type="Label" parent="."]
margin_top = 838.0
margin_right = 640.0
margin_bottom = 852.0
text = "Physical Support:"
autowrap = true

[node name="Support" type="TextureRect" parent="."]
margin_top = 856.0
margin_right = 640.0
margin_bottom = 956.0
rect_min_size = Vector2( 300, 100 )
texture = ExtResource( 2 )
stretch_mode = 5

[node name="VideoLbl" type="Label" parent="."]
margin_top = 960.0
margin_right = 640.0
margin_bottom = 974.0
text = "Video:"
autowrap = true

[node name="Video" type="VideoPlayer" parent="."]
margin_top = 978.0
margin_right = 640.0
margin_bottom = 1458.0
rect_min_size = Vector2( 640, 480 )
expand = false
